CP Weekly, PyDev, v numbers.

--- a/_drafts/2020-11-17-draft.md
+++ b/_drafts/2020-11-17-draft.md
@@ -128,6 +128,10 @@ Discovering exoplanets with Python: David Armstrong and Jev Gamper say how they 
 
 An example of how to use a @property for setter validation in Python - [Twitter](https://twitter.com/pybites/status/1327174286356910080).
 
+PyDev of the Week: Max Humber on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/11/16/pydev-of-the-week-max-humber/)
+
+CircuitPython Weekly Meeting for November 16th, 2020 [on YouTube](https://youtu.be/9zoF6CmGNA4) and [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-11-16.md)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/11/10/python-on-microcontrollers-newsletter-circuitpython-6-release-candidate-1-60-blinka-sbcs-and-more-python-adafruit-circuitpython-micropython-thepsf/)? [CircuitPython programmed PyCubed Satellite](https://www.notion.so/PyCubed-4cbfac7e9b684852a2ab2193bd485c4d).
 
 ## Coming soon
@@ -282,13 +286,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [6.0.0](https://github.com/adafruit/circuitpython/releases/latest). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20201116](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.9.0](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.10.0a2](https://www.python.org/download/pre-releases/).
 
 [1893 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
