New/updated libs/guides, stars

--- a/_drafts/2020-11-24-draft.md
+++ b/_drafts/2020-11-24-draft.md
@@ -5,7 +5,7 @@ date: 2020-11-24 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -114,15 +114,9 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![New Learn Guides](../assets/20201124/20201124learn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[Matrix Portal Flow Visualizer](https://learn.adafruit.com/matrix-portal-flow-visualizer) from [Carter Nelson](https://learn.adafruit.com/users/caternuson)
 
-[title](url) from [name](url)
-
-[title](url) from [name](url)
-
-## Updated Learn Guides!
-
-[title](url) from [name](url)
+[Which CircuitPython Board is Right for You?](https://learn.adafruit.com/choose-your-circuitpython-board) from [Kattni](https://learn.adafruit.com/users/kattni)
 
 ## CircuitPython Libraries!
 
@@ -136,19 +130,30 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **281**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_MagTag](https://github.com/adafruit/Adafruit_CircuitPython_MagTag)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
-
-* [library](url)
+ * [Adafruit_CircuitPython_MONSTERM4SK](https://github.com/adafruit/Adafruit_CircuitPython_MONSTERM4SK)
+ * [Adafruit_CircuitPython_IL0373](https://github.com/adafruit/Adafruit_CircuitPython_IL0373)
+ * [Adafruit_CircuitPython_MatrixPortal](https://github.com/adafruit/Adafruit_CircuitPython_MatrixPortal)
+ * [Adafruit_CircuitPython_LIS3MDL](https://github.com/adafruit/Adafruit_CircuitPython_LIS3MDL)
+ * [Adafruit_CircuitPython_AdafruitIO](https://github.com/adafruit/Adafruit_CircuitPython_AdafruitIO)
+ * [Adafruit_CircuitPython_CharLCD](https://github.com/adafruit/Adafruit_CircuitPython_CharLCD)
+ * [Adafruit_CircuitPython_Display_Text](https://github.com/adafruit/Adafruit_CircuitPython_Display_Text)
+ * [Adafruit_CircuitPython_Requests](https://github.com/adafruit/Adafruit_CircuitPython_Requests)
+ * [Adafruit_CircuitPython_Slideshow](https://github.com/adafruit/Adafruit_CircuitPython_Slideshow)
+ * [Adafruit_CircuitPython_LC709203F](https://github.com/adafruit/Adafruit_CircuitPython_LC709203F)
+ * [Adafruit_CircuitPython_PyBadger](https://github.com/adafruit/Adafruit_CircuitPython_PyBadger)
+ * [Adafruit_CircuitPython_PM25](https://github.com/adafruit/Adafruit_CircuitPython_PM25)
+ * [CircuitPython_Community_Bundle](https://github.com/adafruit/CircuitPython_Community_Bundle)
 
 ## What’s the team up to this week?
 
@@ -228,7 +233,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1899 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
