--- a/_drafts/2020-12-01-draft.md
+++ b/_drafts/2020-12-01-draft.md
@@ -158,45 +158,44 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/20201201/20201201bryan.jpg)](https://circuitpython.org/)
+This past week I've been working with the MLX80395 magnetometer by Melexis; it's a nice little sensor, similar to the TLV493 as they're both targeted towards directly sensing magnets as opposed to sensing the earth's electromagnetic field. These are particularly interesting to me due to the type of interfaces they enable. Being able to sense the distance, rotation and orientation of something (by attaching a magnet to it) without needing direct contact with it is pretty dang cool. 
 
-text
+The TLV493 is designed with joysticks in mind, and the MLX90395 is similarly marketed for "contactless" replacements in places where you'd normally see a mechanical switch or potentiometer. I think it's pretty cool when new doors are opened that change what is possible for all the many places we interact with technology. Buttons still have to be buttons, but when you don't need to make any physical contact with the "switch", a lot of the design constraints  for how an interface has to work go out the window.
+
+It will likely be quite a while until these types of interfaces are common, as the humble switch and potentiometer aren't going anywhere anytime soon, due to familiarity, cost, and overall suitability for their intended purpose. With that said however, I think it won't be _too_ long before we see them being used more, and likely in entirely different ways and places than the switch and pot.
 
 **Dan**
 
-[![Dan](../assets/20201201/20201201dan.jpg)](https://circuitpython.org/)
-
-text
+I have deep sleep working in CircuitPython on the ESP32-S2. The API has gone through several iterations, and has become simpler. I measured the current consumption to confirm it's really sleeping, using a used Monsoon power meter acquired on eBay, and it's in the couple of hundred micro-ampere range, as expected for the board. Expect to see this new capability in a beta of CircuitPython 6.1.0 soon.
 
 **Jeff**
 
-[![Jeff](../assets/20201201/20201201jeff.jpg)](https://circuitpython.org/)
-
-text
+This week I've continued working on I2S audio output for the ESP32S2, which remains a work in progress.  I've also worked on various bugs and improvements in the core, as well as an upcoming guide using Bluetooth and Blinka on a Raspberry Pi 4.
 
 **Kattni**
 
-[![Kattni](../assets/20201201/20201201kattni.jpg)](https://circuitpython.org/)
+This week I added another page to the [Which CircuitPython Board is Right for You?](https://learn.adafruit.com/choose-your-circuitpython-board) guide - Beginner Boards. This page is for folks who are new to CircuitPython, microcontrollers or programming in general. There are a lot of CircuitPython compatible boards to choose from and knowing which one is best to start with should prove to be super helpful. Thanks again to Carter for helping out with this page and the rest of the guide.
 
-text
+I started working on a new project. It's a redo of a MicroPython project, and similar to a previous festive project I did. It will in fact use the same wreath from my previous project, but this time it's featuring the Adafruit MagTag and a NeoPixel strip. The buttons on the MagTag will activate different LED animations. This guide should be out next week.
 
 **Lucian**
 
-[![Lucian](../assets/20201201/20201201lucian.jpg)](https://circuitpython.org/)
-
-text
+This week I wrapped up the work on UDP, with a functional demo of sendto and recvfrom_into, grabbing the time from the global NTP servers. The rest of my week was mostly spent on bugfixes and reviews, including ESP32-S2 pin claiming errors, IDF problems, STM32 I2C sending and receiving, and a new STM32 board, the Thunderpack 1.2. This coming week, I'll be transitioning back into i.MX territory, to check out some of the modules that never got wrapped up, like PWMOut and AnalogIO. I'll also be looking into TCP Server and keeping an eye on new ESP32-S2 bugs that come in on the MagTag and other boards. 
 
 **Melissa**
 
 [![Melissa](../assets/20201201/20201201melissa.jpg)](https://circuitpython.org/)
 
-text
+This past week, I worked on an online ESP Tool some more. One of the challenges I was facing was that the Web Serial streams were converting my bytes into UTF-8 and the ESP32 I was connected to wasn't responding. I found this out by connecting a logic analyzer up and comparing what I thought I was sending to what I was actually getting at the board level. I had a similar issue with the response. I fixed this by removing the TextEncoderStream and TextDecoderStream classes out of the mix and interacting with the port directly, which was different than most examples I was seeing.
+
+Once I had that working, I was able to get the ESP32 to sync and detect the board. I also had it returning the MAC address, which is the unique hardware ID of the network device that accesses the internet. I have the ESP32-S2 being detected as well. Once I had that working, I started work on being able to upload files and have the JavaScript code directly start programming the firmware onto the board. It's not quite working at this point, but it is getting close.
 
 **Scott**
+This last week I've been doing a number of small improvements to the ESP32-S2 and network related things. For example, I sped up json parsing. On my stream I did a test query that took 111 seconds at the start and afterwards took 3 seconds.
 
-[![Scott](../assets/20201201/20201201scott.jpg)](https://circuitpython.org/)
+I've also got a PR out to tweak how the Adafruit requests library works. It turns out the send method may act like it sent data even when it actually hasn't (and can't). So now requests will send everything and check it can read a response before handing off to full response parsing. If it can't read, it recreates the socket and tries again.
 
-text
+There a few other small things too. If you are an early adopter of the ESP32-S2 and CircuitPython, keep an eye on CircuitPython's pull requests and make sure to stay update with the latest pre-release, or even the absolute newest build. We're squashing bugs every day. :-)
 
 ## Upcoming events!
 
