updated NAU7802 post heading

--- a/_drafts/2020-12-01-draft.md
+++ b/_drafts/2020-12-01-draft.md
@@ -43,7 +43,7 @@ guizero is a Python 3 library for creating simple graphical user interfaces (GUI
 
 If you are looking for a similar concept framework for microcontrollers, see circuitpyui - [GitHub](https://github.com/joeycastillo/circuitpyui).
 
-## Developing the NAU7802 24-bit DAC FeatherWing
+## Developing the NAU7802 24-bit ADC FeatherWing
 
 [![NAU7802 24-bit DAC FeatherWing](../assets/20201201/20201201cedar1.jpg)](https://twitter.com/CedarGroveMakr/status/1333156977174691840)
 
