--- a/_drafts/2020-12-01-draft.md
+++ b/_drafts/2020-12-01-draft.md
@@ -127,6 +127,10 @@ Easy & Powerful Arduino Alternative? Pyboard (MicroPython) Beginner's Guide - [Y
 
 Introspection in Python: use built-in Python tools to both find out exactly what any module can do, and find out exactly how Python will execute your code - [Anvil](https://anvil.works/blog/introspection-in-python).
 
+PyDev of the Week: Mridu Bhatnagar on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/11/30/pydev-of-the-week-mridu-bhatnagar/)
+
+CircuitPython Weekly for November 30th, 2020 [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-11-30.md) and [on YouTube](https://youtu.be/eNJQzv-FXw8)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/11/24/python-on-microcontrollers-newsletter-circuitpython-6-released-and-projects-galore-python-adafruit-circuitpython-micropython-thepsf/)? [Adafruit MagTag](https://www.adafruit.com/product/4800).
 
 ## New Tools
@@ -273,13 +277,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [6.0.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.1.0-beta.1](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20201126](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.9.0](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.10.0a2](https://www.python.org/download/pre-releases/).
 
 [1908 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
