--- a/_drafts/2020-12-08-draft.md
+++ b/_drafts/2020-12-08-draft.md
@@ -175,6 +175,10 @@ A Comprehensive Guide to Profiling Python Programs: understanding what parts of 
 
 How to test your AWS code using Moto and Pytest - [Learn AWS](https://www.learnaws.org/2020/12/01/test-aws-code/).
 
+PyDev of the Week: Shauna Gordon McKeon on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/12/07/pydev-of-the-week-shauna-gordon-mckeon/)
+
+CircuitPython Weekly for December 7th, 2020 [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-12-07.md) and [on YouTube](https://youtu.be/CLNkQfFLHCg)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/12/01/python-on-microcontrollers-newsletter-esp32-s2-low-power-guis-and-more-python-adafruit-circuitpython-micropython-thepsf/)? [What is guizero](https://lawsie.github.io/guizero/about/).
 
 ## Coming soon
@@ -328,13 +332,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [6.0.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.1.0-beta.2](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20201207](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.9.0](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.10.0a2](https://www.python.org/download/pre-releases/).
 
 [1918 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
