New/updated guides/libs, stars.

--- a/_drafts/2020-12-15-draft.md
+++ b/_drafts/2020-12-15-draft.md
@@ -5,7 +5,7 @@ date: 2020-12-08 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -112,15 +112,15 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![New Learn Guides](../assets/20201215/20201215learn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[MagTag Tides Viewer](https://learn.adafruit.com/magtag-tides-viewer) from [Carter Nelson](https://learn.adafruit.com/users/caternuson)
 
-[title](url) from [name](url)
+[MagTag Showerthoughts and Quotes](https://learn.adafruit.com/magtag-showerthoughts) from [John Park](https://learn.adafruit.com/users/johnpark)
 
-[title](url) from [name](url)
+[Cheerlights Holiday Wreath with Animations](https://learn.adafruit.com/cheerlights-led-animations) from [Kattni](https://learn.adafruit.com/users/kattni)
 
-## Updated Learn Guides!
+[What’s Fresh Today? In-Season Produce Reminder for Adafruit MagTag](https://learn.adafruit.com/seasonal-produce-for-adafruit-magtag) from [Phil Burgess](https://learn.adafruit.com/users/pburgess)
 
-[title](url) from [name](url)
+[MagTag Daily Christmas Countdown](https://learn.adafruit.com/magtag-daily-christmas-countdown) from [Noe and Pedro](https://learn.adafruit.com/users/pixil3d)
 
 ## CircuitPython Libraries!
 
@@ -134,19 +134,34 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **286**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_FakeRequests](https://github.com/adafruit/Adafruit_CircuitPython_FakeRequests)
+ * [Adafruit_CircuitPython_PortalBase](https://github.com/adafruit/Adafruit_CircuitPython_PortalBase)
+ * [Adafruit_CircuitPython_SCD30](https://github.com/adafruit/Adafruit_CircuitPython_SCD30)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_MatrixPortal](https://github.com/adafruit/Adafruit_CircuitPython_MatrixPortal)
+ * [Adafruit_CircuitPython_SSD1306](https://github.com/adafruit/Adafruit_CircuitPython_SSD1306)
+ * [Adafruit_CircuitPython_Display_Text](https://github.com/adafruit/Adafruit_CircuitPython_Display_Text)
+ * [Adafruit_CircuitPython_SI7021](https://github.com/adafruit/Adafruit_CircuitPython_SI7021)
+ * [Adafruit_CircuitPython_MagTag](https://github.com/adafruit/Adafruit_CircuitPython_MagTag)
+ * [Adafruit_CircuitPython_Bitmap_Font](https://github.com/adafruit/Adafruit_CircuitPython_Bitmap_Font)
+ * [Adafruit_CircuitPython_BMP3XX](https://github.com/adafruit/Adafruit_CircuitPython_BMP3XX)
+ * [Adafruit_Blinka](https://github.com/adafruit/Adafruit_Blinka)
+ * [Adafruit_Blinka_Displayio](https://github.com/adafruit/Adafruit_Blinka_Displayio)
+ * [Adafruit_Python_PlatformDetect](https://github.com/adafruit/Adafruit_Python_PlatformDetect)
+ * [Adafruit_Python_PureIO](https://github.com/adafruit/Adafruit_Python_PureIO)
+ * [Adafruit_Blinka_PyPortal](https://github.com/adafruit/Adafruit_Blinka_PyPortal)
+ * [Adafruit_Python_Extended_Bus](https://github.com/adafruit/Adafruit_Python_Extended_Bus)
+ * [CircuitPython_Community_Bundle](https://github.com/adafruit/CircuitPython_Community_Bundle)
 
 ## What’s the team up to this week?
 
@@ -225,7 +240,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[#### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1930 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
