Adding Using the Pimoroni Enviro+ FeatherWing With the Adafruit Feather NRF52840 Express

--- a/_drafts/2020-12-22-draft.md
+++ b/_drafts/2020-12-22-draft.md
@@ -67,11 +67,11 @@ Adafruit is currently offering a one-time use discount code of 20% off after add
 
 ## News from around the web!
 
-[![title](../assets/20201222/20201222-name.jpg)](url)
+[![Using the Pimoroni Enviro+ FeatherWing With the Adafruit Feather NRF52840 Express](../assets/20201222/20201222feathernrf52840expressenviroplusfeatherwing.jpg)](https://www.instructables.com/Using-the-Pimoroni-Enviro-FeatherWing-With-the-Ada/)
 
-text - [site](url).
+A short guide explaining how to use the [Pimoroni Enviro+ FeatherWing](https://shop.pimoroni.com/products/enviro-plus-featherwing) with the [Adafruit Feather NRF52840 Express](https://www.adafruit.com/product/4062). It includes a few tips on soldering, a summary of pins used, how to workaround issues in a library and some ideas for further work - [Instructables](https://www.instructables.com/Using-the-Pimoroni-Enviro-FeatherWing-With-the-Ada/).
 
-[![title](../assets/20201222/20201222-name.jpg)](url)
+[![title](../assets/20201222/20201222-name.jpg)]()
 
 text - [site](url).
 
