--- a/_drafts/2020-12-22-draft.md
+++ b/_drafts/2020-12-22-draft.md
@@ -168,6 +168,10 @@ Python vs C++: Selecting the Right Tool for the Job - [Real Python](https://real
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/12/15/python-on-microcontrollers-newsletter-circuitpython-on-sony-spresense-guide-and-much-more-python-adafruit-circuitpython-micropython-thepsf/)? [CircuitPython Getting Started Guide for Sony Spresense](https://developer.sony.com/develop/spresense/docs/circuitpython_set_up_en.html).
 
+PyDev of the week: Martijn Faassen on [Mouse vs Python](https://github.com/adafruit/circuitpython-weekly-newsletter/tree/gh-pages/_drafts)
+
+CircuitPython Weekly Meeting for December 21, 2020 ([notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-12-21.md)) [on YouTube](https://youtu.be/uXuS6r_Uegw)
+
 ## Coming soon
 
 [![BluePhage Express](../assets/20201222/20201222bluephage.jpg)](https://www.reddit.com/r/MechanicalKeyboards/comments/kh58vn/meet_the_bluephage_express_a_bluetooth_keyboard/)
@@ -344,15 +348,15 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [6.0.0](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.1.0-beta.2](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2020####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20201221](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.13](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.9.0](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.10.a3](https://www.python.org/download/pre-releases/).
 
-[1933 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1942 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
