New/updated guides/libs, stars

--- a/_drafts/2021-01-05-draft.md
+++ b/_drafts/2021-01-05-draft.md
@@ -5,7 +5,7 @@ date: 201-01-05 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -118,15 +118,13 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![New Learn Guides](../assets/20210105/20210105learn.jpg)](https://learn.adafruit.com/guides/latest)
 
-[title](url) from [name](url)
+[MagTag Twitter Display](https://learn.adafruit.com/magtag-twitter-display) from [Brent Rubell](https://learn.adafruit.com/users/brubell)
 
-[title](url) from [name](url)
+[Adafruit LTR390 UV Sensor](https://learn.adafruit.com/adafruit-ltr390-uv-sensor) from [Brian Siepert](https://learn.adafruit.com/users/siddacious)
 
-[title](url) from [name](url)
+[Adafruit SGP40 Air Quality Sensor](https://learn.adafruit.com/adafruit-sgp40) from [Kattni](https://learn.adafruit.com/users/kattni)
 
-## Updated Learn Guides!
-
-[title](url) from [name](url)
+[Adafruit MagTag Project Selector](https://learn.adafruit.com/adafruit-magtag-project-selector) from [Dylan Herrada](https://learn.adafruit.com/users/dherrada)
 
 ## CircuitPython Libraries!
 
@@ -140,19 +138,32 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **289**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_SGP40](https://github.com/adafruit/Adafruit_CircuitPython_SGP40)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_LSM9DS1](https://github.com/adafruit/Adafruit_CircuitPython_LSM9DS1)
+ * [Adafruit_CircuitPython_BluefruitConnect](https://github.com/adafruit/Adafruit_CircuitPython_BluefruitConnect)
+ * [Adafruit_CircuitPython_BNO08x](https://github.com/adafruit/Adafruit_CircuitPython_BNO08x)
+ * [Adafruit_CircuitPython_SHTC3](https://github.com/adafruit/Adafruit_CircuitPython_SHTC3)
+ * [Adafruit_CircuitPython_JWT](https://github.com/adafruit/Adafruit_CircuitPython_JWT)
+ * [Adafruit_CircuitPython_GPS](https://github.com/adafruit/Adafruit_CircuitPython_GPS)
+ * [Adafruit_CircuitPython_PortalBase](https://github.com/adafruit/Adafruit_CircuitPython_PortalBase)
+ * [Adafruit_CircuitPython_RFM9x](https://github.com/adafruit/Adafruit_CircuitPython_RFM9x)
+ * [Adafruit_CircuitPython_MagTag](https://github.com/adafruit/Adafruit_CircuitPython_MagTag)
+ * [Adafruit_CircuitPython_Slideshow](https://github.com/adafruit/Adafruit_CircuitPython_Slideshow)
+ * [Adafruit_CircuitPython_LTR390](https://github.com/adafruit/Adafruit_CircuitPython_LTR390)
+ * [circuitpython](https://github.com/adafruit/circuitpython)
+ * [Adafruit_Blinka](https://github.com/adafruit/Adafruit_Blinka)
+ * [Adafruit_Blinka_bleio](https://github.com/adafruit/Adafruit_Blinka_bleio)
 
 ## What’s the team up to this week?
 
@@ -238,7 +249,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[#### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1958 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
